# ImageSegmenterX

./: README.md
Ass-4-k-means-2/: Ass-4-k-means-2.pro  k-means.cpp  k-means.h  localthreshold.h  main.cpp  mean-shift.cpp  mean-shift.h
UI/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
algorithms/: CMakeLists.txt  agglomerative.cpp  agglomerative.h  kmean.cpp  kmean.h  local_thresholding.cpp  local_thresholding.h  main.cpp  mean_shift.cpp  mean_shift.h  optimal_thresholding.cpp  optimal_thresholding.h  otsu_thresholding.cpp  otsu_thresholding.h  region_growing.cpp  region_growing.h  spectral_thresholding.cpp  spectral_thresholding.h
draft/Agglomerative/: mainwindow.cpp  mainwindow.h  mainwindow.ui
draft/Ass-4-k-means-2/: Ass-4-k-means-2.pro  garbage.cpp  k-means.cpp  k-means.h  localthreshold.cpp  main.cpp  mainwindow.ui  mean-shift.cpp
draft/Spectral thresholding/: mainwindow.cpp  mainwindow.h  mainwindow.ui
draft/build-Ass-4-k-means-2-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  ui_mainwindow.h
draft/build-Ass-4-k-means-2-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
draft/build-Ass-4-k-means-2-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/.qtc_clangd/.cache/clangd/index/: main.cpp.8E0408A6DA76305F.idx  mainwindow.cpp.129EDD5A30009572.idx  mainwindow.h.6107D4A5BF4A871E.idx  qflags.h.BDBD18B36FD7FCD7.idx  qglobal.h.B91892E50EF0F664.idx  qsystemdetection.h.5E1A202DA18BBD7D.idx  qwidget.h.6B11DBA2570AFE30.idx
draft/build-Ass-4-k-means-2-Desktop_Qt_6_4_3_MinGW_64_bit-Debug/debug/: moc_mainwindow.cpp
draft/mean shift/: mean-shift-by-me.ipynb  mean-shift.ipynb
draft/optimal thresholding & region growing/: CMakeLists.txt  main.cpp  optimal_thresholding.cpp  optimal_thresholding.h  region_growing.cpp  region_growing.h
draft/otsu/: CMakeLists.txt  main.cpp
mean shift/: mean-shift-by-me.ipynb
